improve OAuth2EmulatorTests